; ModuleID = '/home/carl/AnghaBench/openssl/crypto/x509/extr_v3_utl.c_i2s_ASN1_INTEGER.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/x509/extr_v3_utl.c_i2s_ASN1_INTEGER.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@X509V3_F_I2S_ASN1_INTEGER = common dso_local global i32 0, align 4
@ERR_R_MALLOC_FAILURE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @i2s_ASN1_INTEGER(i32* %0, i32* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i8*, align 8
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32* null, i32** %6, align 8
  store i8* null, i8** %7, align 8
  %8 = load i32*, i32** %5, align 8
  %9 = icmp ne i32* %8, null
  br i1 %9, label %11, label %10

10:                                               ; preds = %2
  store i8* null, i8** %3, align 8
  br label %27

11:                                               ; preds = %2
  %12 = load i32*, i32** %5, align 8
  %13 = call i32* @ASN1_INTEGER_to_BN(i32* %12, i32* null)
  store i32* %13, i32** %6, align 8
  %14 = icmp eq i32* %13, null
  br i1 %14, label %19, label %15

15:                                               ; preds = %11
  %16 = load i32*, i32** %6, align 8
  %17 = call i8* @bignum_to_string(i32* %16)
  store i8* %17, i8** %7, align 8
  %18 = icmp eq i8* %17, null
  br i1 %18, label %19, label %23

19:                                               ; preds = %15, %11
  %20 = load i32, i32* @X509V3_F_I2S_ASN1_INTEGER, align 4
  %21 = load i32, i32* @ERR_R_MALLOC_FAILURE, align 4
  %22 = call i32 @X509V3err(i32 %20, i32 %21)
  br label %23

23:                                               ; preds = %19, %15
  %24 = load i32*, i32** %6, align 8
  %25 = call i32 @BN_free(i32* %24)
  %26 = load i8*, i8** %7, align 8
  store i8* %26, i8** %3, align 8
  br label %27

27:                                               ; preds = %23, %10
  %28 = load i8*, i8** %3, align 8
  ret i8* %28
}

declare dso_local i32* @ASN1_INTEGER_to_BN(i32*, i32*) #1

declare dso_local i8* @bignum_to_string(i32*) #1

declare dso_local i32 @X509V3err(i32, i32) #1

declare dso_local i32 @BN_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
